[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/default_enemy.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=45]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "atack_down",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "atack_left",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "atack_right",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "atack_up",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 45 )
animation = "atack_down"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -8, -1, -12, 8, -12, 10, -4, 7, 3, -2, 5, -10, 1 )

[node name="NotMovTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="NotMovTimer" to="." method="_on_NotMovTimer_timeout"]
